@@ -16,9 +16,9 @@ HOSTS:
     hypervisor: <%= hypervisor %>
     yum_repos:
       epel:
-        url: 'http://download.fedoraproject.org/pub/epel/7/$basearch'
+        mirrorlist: 'https://mirrors.fedoraproject.org/metalink?repo=epel-7&arch=$basearch'
         gpgkeys:
-          - https://getfedora.org/static/352C64E5.txt
+          - https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-$releasever
 
   el6-system:
     roles:
@@ -28,9 +28,9 @@ HOSTS:
     hypervisor: <%= hypervisor %>
     yum_repos:
       epel:
-        url: 'http://download.fedoraproject.org/pub/epel/6/$basearch'
+        mirrorlist: 'https://mirrors.fedoraproject.org/metalink?repo=epel-6&arch=$basearch'
         gpgkeys:
-          - https://getfedora.org/static/0608B895.txt
+          - https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-$releasever
 
 CONFIG:
   log_level: verbose
